// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Collapsible> should render as expected 1`] = `
<div
  className="CollapsibleStyle__CollapsibleContainer-sc-133mwvh-1 dFFxEB aries-collapsible"
  data-testid="collapsible-container"
  onClick={[Function]}
  tabIndex={0}
>
  <div
    className="CollapsibleStyle__CollapsibleContent-sc-133mwvh-0 ffRrKK"
    tabIndex={-1}
  >
    <div
      aria-expanded={false}
      className="CollapsibleStyle__CollapsibleHeader-sc-133mwvh-2 dlhBAv collapsible-title"
      role="tab"
    >
      label
      <svg
        className="IconStyle__VerticalCenteredSvg-x7d280-0 iFpcQN"
        data-testid="icon-svg"
        fill="#000000"
        height="1em"
        viewBox="0 0 100 100"
        width="1em"
      >
        <polygon
          points="11.7984725 19 49.9935275 57.3950291 88.1885825 19 99.987055 30.7984725 49.9935275 80.792 0 30.7984725"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`<Collapsible> should render as expected 2`] = `
<div
  className="CollapsibleStyle__CollapsibleContainer-sc-133mwvh-1 dFFxEB aries-collapsible"
  data-testid="collapsible-container"
  onClick={[Function]}
  tabIndex={0}
>
  <div
    className="CollapsibleStyle__CollapsibleContent-sc-133mwvh-0 ffRrKK"
    tabIndex={-1}
  >
    <div
      aria-expanded={true}
      className="CollapsibleStyle__CollapsibleHeader-sc-133mwvh-2 eXowwp collapsible-title"
      role="tab"
    >
      label
      <svg
        className="IconStyle__VerticalCenteredSvg-x7d280-0 iFpcQN"
        data-testid="icon-svg"
        fill="#000000"
        height="1em"
        viewBox="0 0 100 100"
        width="1em"
      >
        <polygon
          points="11.7984725 19 49.9935275 57.3950291 88.1885825 19 99.987055 30.7984725 49.9935275 80.792 0 30.7984725"
        />
      </svg>
    </div>
    <div
      className="CollapsibleStyle__CollapsibleBody-sc-133mwvh-3 jZAnJE collapsible-content"
      data-testid="collapsible-content"
      onClick={[Function]}
    >
      children
    </div>
  </div>
</div>
`;
